Windows Taskbar is shown on top of PIP content in fullscreen
Categories
(Core :: Widget: Win32, defect)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr140 | --- | unaffected |
| firefox144 | --- | unaffected |
| firefox145 | + | fixed |
| firefox146 | --- | fixed |
People
(Reporter: philipp, Assigned: gstoll)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files)
steps to reproduce (i'm testing this on a 64bit version of firefox on win11 25h2):
- open a youtube video, i.e. the educational content at https://www.youtube.com/watch?v=vnERcPTiLqc
- let the content play in pip-mode
- in the pip overlay, click on the button to run the video in fullscreen
result: the windows taskbar remains in front of the video content and is obscuring part of the pip video controls (timestamps, volume, play/pause,...)
running mozregression has brought up this pushlog_url as introducing the regressing behaviour: https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=b7097be148c0a1107902fff64ec3a4fb1c666465&tochange=53aa44de71d67d208a00cae329749c3738cda7ac
| Assignee | ||
Comment 1•10 months ago
|
||
Ugh, yeah, I can repro. Hopefully turning off the Windows App SDK on PiP windows will fix this.
| Assignee | ||
Comment 2•10 months ago
|
||
[Tracking Requested - why for this release]: Potentially affects a lot of Windows users. I'm hoping to get a simple fix in that we can uplift.
| Assignee | ||
Comment 3•10 months ago
|
||
This was making the fullscreened picture-in-picture windows go under the
Windows taskbar.
| Assignee | ||
Updated•10 months ago
|
Comment 5•10 months ago
|
||
| bugherder | ||
Updated•10 months ago
|
Comment 6•10 months ago
|
||
The patch landed in nightly and beta is affected.
:gstoll, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- See https://wiki.mozilla.org/Release_Management/Requesting_an_Uplift for documentation on how to request an uplift.
- If no, please set
status-firefox145towontfix.
For more information, please visit BugBot documentation.
Comment 7•10 months ago
|
||
firefox-beta Uplift Approval Request
- User impact if declined: simple fix; problem affects anyone using fullscreen PiP on Windows 24H2 and above
- Code covered by automated testing: no
- Fix verified in Nightly: yes
- Needs manual QE test: no
- Steps to reproduce for manual QE testing:
- Risk associated with taking this patch: low
- Explanation of risk level: simple check to avoid doing this for PiP windows
- String changes made/needed: no
- Is Android affected?: no
| Assignee | ||
Comment 8•10 months ago
|
||
This was making the fullscreened picture-in-picture windows go under the
Windows taskbar.
Original Revision: https://phabricator.services.mozilla.com/D269673
| Assignee | ||
Updated•10 months ago
|
Updated•10 months ago
|
Updated•10 months ago
|
Description
•