Bug 1995838 - don't use Windows App SDK on PiP windows r=win-reviewers,handyman

This was making the fullscreened picture-in-picture windows go under the
Windows taskbar.

Differential Revision: https://phabricator.services.mozilla.com/D269673